<resources>
    <string name="app_name">GamerTools</string>
    <string name="button">Button</string>
    <string name="dice">Dice</string>
    <string name="gamer">Gamer</string>
    <string name="score_keeper">Score Keeper</string>
    <string name="tools">Tools</string>

    <string name="decrease_score_by_large_amount">Decrease score by large amount</string>
    <string name="_00">0</string>
    <string name="decrease_score_by_small_amount">Decrease score by small amount</string>
    <string name="increase_score_by_large_amount">Increase score by large amount</string>
    <string name="increase_score_by_small_amount">Increase score by small amount</string>
    <string name="roll">Roll</string>
    <string name="_Score">0</string>
    <string name="string_score" />
    <string name="string_string_score">0</string>

    <string name="dice_text">Dice</string>
    <string name="sides">Sides</string>
    <string name="gamer_tools">Gamer Tools</string>
    <string name="accept">Accept</string>
    <string name="major_increase_value">Major Increase Value</string>
    <string name="major_decrease_value">Major Decrease Value</string>
    <string name="minor_decrease_value">Minor Decrease Value</string>
    <string name="minor_increase_value">Minor Increase Value</string>
    <string name="tab1" />
    <string name="tab2" />
    <string name="options">Options</string>
    <string name="preset_Players">\"1\"</string>
    <string name="preset_Minor_Up" />
    <string name="preset_Major_Up" />
    <string name="preset_Major_Down" />
    <string name="preset_Minor_Down" />
    <string name="preset_Minor_Up_2" />
    <string name="preset_Major_Up_2" />
    <string name="preset_Minor_Down_2" />
    <string name="preset_Major_Down_2" />
    <string name="preset_Minor_Up_3" />
    <string name="preset_Major_Up_3" />
    <string name="preset_Minor_Down_3" />
    <string name="preset_Major_Down_3" />
    <string name="preset_Minor_Up_4" />
    <string name="preset_Major_Up_4" />
    <string name="preset_Minor_Down_4" />
    <string name="preset_Major_Down_4" />
    <string name="past_rolls_n">Past Rolls</string>
    <string name="premade">Premade</string>
    <string name="confirm">Confirm</string>
    <string name="clear">Clear</string>
    <string name="word_x_2">Word X 2</string>
    <string name="s">S</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="a">A</string>
    <string name="j">J</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="b">B</string>
    <string name="word_x_3">Word X 3</string>
    <string name="z">Z</string>
    <string name="y">Y</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="r">R</string>
    <string name="p">P</string>
    <string name="o">O</string>
    <string name="n">N</string>
    <string name="q">Q</string>
    <string name="k">K</string>
    <string name="total_score">Total Score:</string>
    <string name="word_score">Word Score:</string>
    <string name="l">L</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="w">W</string>
    <string name="g">G</string>
    <string name="reset">Reset</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_5">5</string>

    <string name="_6">6</string>

    <string name="_1500">1500</string>

    <string name="_500">500</string>
    <string name="_50">50</string>
    <string name="_20">20</string>
    <string name="_100">100</string>
    <string name="gain">Gain</string>
    <string name="_10">10</string>
    <string name="lose">Lose</string>
    <string name="_0">0</string>

</resources>
