<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="jacob.gamertools.Score_Activity">

    <ImageButton
        android:id="@+id/minor_Down_Button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/decrease_score_by_small_amount"
        android:onClick="click_Minor_Down"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score_Text"
        app:layout_constraintVertical_bias="0.22000003"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/minor_Up_Button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/increase_score_by_small_amount"
        android:onClick="click_Minor_Up"
        android:rotation="270"
        app:layout_constraintBottom_toTopOf="@+id/Score_Text"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71000004"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/major_Up_Button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/increase_score_by_large_amount"
        android:onClick="click_Major_Up"
        android:rotation="270"
        app:layout_constraintBottom_toTopOf="@+id/minor_Up_Button"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <ImageButton
        android:id="@+id/major_Down_Button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/decrease_score_by_large_amount"
        android:onClick="click_Major_Down"
        android:rotation="-90"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minor_Down_Button"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <TextView
        android:id="@+id/Score_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_string_score"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
